# jasmin-account-api-client

./: .gitignore  Makefile  README.md  config.yaml  schema.yaml
jasmin-account-api-client/: README.md  pyproject.toml
jasmin-account-api-client/jasmin_account_api_client/: __init__.py  client.py
jasmin-account-api-client/jasmin_account_api_client/api/api/: __init__.py  api_email_retrieve.py  api_profile_list.py  api_services_retrieve.py
jasmin-account-api-client/jasmin_account_api_client/api/categories/: __init__.py  categories_grants_list.py  categories_list.py  categories_retrieve.py  categories_services_list.py  categories_services_retrieve.py  categories_services_roles_list.py  categories_services_roles_retrieve.py
jasmin-account-api-client/jasmin_account_api_client/api/grants/: __init__.py  grants_list.py
jasmin-account-api-client/jasmin_account_api_client/api/institutions/: __init__.py  institutions_list.py  institutions_retrieve.py
jasmin-account-api-client/jasmin_account_api_client/api/services/: __init__.py  services_list.py  services_retrieve.py  services_roles_list.py  services_roles_retrieve.py
jasmin-account-api-client/jasmin_account_api_client/api/users/: __init__.py  users_list.py  (+5 more)
jasmin-account-api-client/jasmin_account_api_client/models/: __init__.py  access.py  account.py  category.py  category_list.py  category_service.py  degree_enum.py  discipline_enum.py  grant.py  institution_countries_enum.py  institution_list.py  instution_countries_enum.py  legacy_profile.py  lifecycle_state_enum.py  patched_user.py  related_institution.py  role.py  role_list.py  service.py  service_list.py  service_user.py  user.py  user_grant.py  user_list.py  user_type_enum.py  users_list_lifecycle_state.py  users_list_user_type.py
(+13 files in other folders)
